# http11-rs

./: .gitignore  AGENTS.md  CHANGES.md  Cargo.toml  Makefile  README.md  canary.py
.github/workflows/: ci.yml  release.yml
crates/tokio-http11/: Cargo.toml  README.md
crates/tokio-http11/src/: client.rs  error.rs  lib.rs  response_ext.rs  server.rs
examples/http11_client/: Cargo.toml
examples/http11_client/src/: decompressor.rs  lib.rs  main.rs  transport.rs  url.rs
examples/http11_client/tests/: nginx_basic.rs  nginx_streaming.rs
examples/http11_client/tests/helpers/: mod.rs
examples/http11_reverse_proxy/: Cargo.toml
examples/http11_reverse_proxy/src/: main.rs
examples/http11_server/: Cargo.toml
examples/http11_server/src/: compressor.rs  main.rs
examples/http11_server/tests/: http_basic.rs  http_compression.rs  http_keep_alive.rs  https_tls.rs
examples/http11_server/tests/helpers/: mod.rs
examples/http11_server_io_uring/: Cargo.toml  README.md
examples/http11_server_io_uring/src/: compressor.rs  main.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_accept.rs  fuzz_auth.rs  fuzz_cache.rs  fuzz_chunked.rs  fuzz_chunked_trailer.rs  fuzz_conditional.rs  fuzz_content_disposition.rs  fuzz_content_encoding.rs  fuzz_content_headers.rs  fuzz_content_language.rs  fuzz_content_location.rs  fuzz_content_type.rs  fuzz_cookie.rs  fuzz_date.rs  fuzz_decoder_chunked.rs  fuzz_decoder_decompressed.rs  fuzz_decoder_limits.rs  fuzz_decoder_mut_buf.rs  fuzz_decoder_request.rs  fuzz_decoder_response.rs  fuzz_decoder_response_method.rs  fuzz_decoder_roundtrip.rs  fuzz_digest_fields.rs  fuzz_encode_chunks.rs  fuzz_encode_headers.rs  fuzz_encode_request.rs  fuzz_encode_response.rs  fuzz_etag.rs  fuzz_expect.rs  fuzz_host.rs  fuzz_mark_eof.rs  fuzz_multipart.rs  fuzz_multipart_boundary.rs  fuzz_multipart_roundtrip.rs  fuzz_percent_encoding.rs  fuzz_pipelined.rs  fuzz_range.rs  fuzz_request_decoder.rs  fuzz_request_response_helpers.rs  fuzz_response_decoder.rs  (+7 more)
issues/: 0003-refactor-base64-shared-module.md  0004-change-request-response-body-optional.md  0005-refactor-share-request-target-form.md  0006-change-content-length-type-to-u64.md  0007-refactor-impl-httphead-for-request-response.md  0008-refactor-separate-request-target-validation.md  0009-enhance-get-headers-iterator-api.md  0010-refactor-validate-module-responsibilities.md  0011-cleanup-remove-macro-use-from-extern-crate-alloc.md  0012-enhance-add-direct-buffer-write-api.md  0013-enh-remove-unnecessary-heap-allocations.md  0014-change-refine-body-progress.md  0015-enhance-http11-client-streaming-example.md  0016-change-unify-expect-no-body-into-request-method.md  0017-change-response-fields-private-with-validation.md  0020-change-status-class-enum.md  0021-enhance-response-builder-mutator-consistency.md  0023-enhance-response-doc-rfc-references.md  0024-add-status-code-type-and-response-with-status.md  0025-change-request-fields-private-with-validation.md  0026-add-http11-server-curl-integration-tests.md  0027-add-http11-client-testcontainers-tests.md  0029-fix-content-length-trim-unicode-whitespace.md  0030-change-request-decoder-connect-tunnel-api.md  0031-change-request-head-response-head-fields-private.md  0032-change-trailer-fields-whitelist.md  0033-fix-response-content-length-transfer-encoding-conflict.md  0034-fix-multipart-initial-off-by-one.md  0035-fix-multipart-find-bytes-quadratic-rescan.md  0036-fix-quoted-string-quoted-pair-ctl-rejection.md  0037-fix-digest-auth-username-star-support.md  0038-fix-base64-strict-decoding.md  0039-change-request-api-symmetry-with-response.md  0040-fix-is-keep-alive-http11-exact-match.md  0041-change-encoder-result-on-semantic-violation.md  0041-fix-encoder-release-panic-on-semantic-violation.md  0042-fix-multipart-fragment-after-boundary-incomplete-loop.md  0043-fix-multipart-delimiter-transport-padding-validation.md  0044-change-httphead-content-length-strict-parse.md  0044-fix-httphead-content-length-strict-parse.md  (+47 more)
issues/closed/: 0001-bug-multipart-parser-buffer-limit.md  0002-enhance-feed-unchecked-naming-and-docs.md  0003-feat-canonical-reason.md  0003-refactor-base64-shared-module.md  0004-change-request-response-body-optional.md  0005-refactor-share-request-target-form.md  0006-change-content-length-type-to-u64.md  0007-refactor-impl-httphead-for-request-response.md  0008-refactor-separate-request-target-validation.md  0009-enhance-get-headers-iterator-api.md  0010-refactor-validate-module-responsibilities.md  0011-cleanup-remove-macro-use-from-extern-crate-alloc.md  0012-enhance-add-direct-buffer-write-api.md  0013-enh-remove-unnecessary-heap-allocations.md  0014-change-refine-body-progress.md  0015-enhance-http11-client-streaming-example.md  0016-change-unify-expect-no-body-into-request-method.md  0017-change-response-fields-private-with-validation.md  0019-change-introduce-http-version-enum.md  0020-change-status-class-enum.md  0021-enhance-response-builder-mutator-consistency.md  (+65 more)
pbt/: Cargo.toml
refs/: draft-ietf-httpbis-rfc6265bis-22.txt
src/: accept.rs  auth.rs  base64.rs  cache.rs  compression.rs  conditional.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_location.rs  content_type.rs  cookie.rs  date.rs  decoder.rs  digest_fields.rs  encoder.rs  error.rs  etag.rs  expect.rs  host.rs  lib.rs  limits.rs  multipart.rs  range.rs  request.rs  request_target.rs  response.rs  status_code.rs  trailer.rs  upgrade.rs  uri.rs  validate.rs  vary.rs
tests/: test_accept.rs  test_auth.rs  test_cache.rs  test_compression.rs  test_conditional.rs  test_content_disposition.rs  test_content_encoding.rs  test_content_language.rs  test_content_location.rs  test_content_type.rs  test_cookie.rs  test_date.rs  test_decode_body.rs  test_decoder.rs  test_digest_fields.rs  test_encoder.rs  test_etag.rs  test_expect.rs  test_host.rs  test_limits.rs  test_multipart.rs  test_range.rs  test_request.rs  test_request_target.rs  test_response.rs  test_status_code.rs  test_trailer.rs  test_upgrade.rs  test_uri.rs  test_vary.rs
(+67 files in other folders)
