[package]
name = "shiguredo_http11"
version = "2026.3.0"
edition = "2024"
rust-version = "1.88"
description = "HTTP/1.1 Library"
readme = "README.md"
homepage = "https://github.com/shiguredo/http11-rs"
repository = "https://github.com/shiguredo/http11-rs"
license = "Apache-2.0"
include = ["/LICENSE", "/README.md", "/src/**"]

[workspace]
members = [
  "examples/http11_client",
  "examples/http11_reverse_proxy",
  "examples/http11_server",
  "pbt",
]
exclude = ["examples/http11_server_io_uring", "fuzz"]

[dependencies]
