[package]
name = "shiguredo_http11"
version = "2026.5.0-canary.0"
edition.workspace = true
rust-version.workspace = true
description = "HTTP/1.1 Library"
readme = "README.md"
homepage = "https://github.com/shiguredo/http11-rs"
repository = "https://github.com/shiguredo/http11-rs"
license = "Apache-2.0"
include = ["/LICENSE", "/README.md", "/src/**"]

[workspace]
members = [
  "examples/http11_client",
  "examples/http11_reverse_proxy",
  "examples/http11_server",
  "pbt",
]
exclude = ["examples/http11_server_io_uring", "fuzz"]

[workspace.package]
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
# 本ライブラリ (workspace ルートを参照)
shiguredo_http11 = { path = "." }

[dependencies]
