[package]
name = "http11_reverse_proxy"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
shiguredo_http11 = { path = "../.." }
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
    "aws-lc-rs",
] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
    "sync",
    "time",
] }
tokio-rustls = "0.26"
rustls-platform-verifier = "0.6"
noargs = "0.4"
