[package]
name = "http11_reverse_proxy"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# 本ライブラリ (workspace で参照)
shiguredo_http11.workspace = true

# コマンドライン引数のパース
noargs = "0.4"
# TLS 実装
rustls = { version = "0.23", default-features = false, features = [
  # 暗号ライブラリバックエンド
  "aws_lc_rs",
  # std 環境での動作に必要
  "std",
  # TLS 1.2 を有効化
  "tls12",
] }
# プラットフォーム標準の証明書ストアを利用する
rustls-platform-verifier = "0.6"
# 非同期ランタイム
tokio = { version = "1.52", features = [
  # 非同期入出力ユーティリティ
  "io-util",
  # main 関数のマクロ
  "macros",
  # TCP / UDP ソケット
  "net",
  # マルチスレッドランタイム
  "rt-multi-thread",
  # 同期プリミティブ
  "sync",
  # タイマー
  "time",
] }
# tokio 上で rustls を動作させるアダプタ
tokio-rustls = { version = "0.26", default-features = false, features = [
  # 暗号ライブラリバックエンド
  "aws_lc_rs",
] }
# ログ出力
tracing = "0.1"
# ログのフォーマットとサブスクライバ
tracing-subscriber = "0.3"
