[package]
# パッケージ名
name = "http11_server"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
# 本ライブラリ (相対パスで参照)
shiguredo_http11 = { path = "../.." }

# コマンドライン引数のパース
noargs = "0.4"
# TLS 実装
rustls = { version = "0.23", default-features = false, features = [
  # 暗号ライブラリバックエンド
  "aws_lc_rs",
  # std 環境での動作に必要
  "std",
  # TLS 1.2 を有効化
  "tls12",
] }
# 非同期ランタイム
tokio = { version = "1.52", features = [
  # 非同期入出力ユーティリティ
  "io-util",
  # main 関数のマクロ
  "macros",
  # TCP / UDP ソケット
  "net",
  # マルチスレッドランタイム
  "rt-multi-thread",
  # タイマー
  "time",
] }
# tokio 上で rustls を動作させるアダプタ
tokio-rustls = { version = "0.26", default-features = false, features = [
  # 暗号ライブラリバックエンド
  "aws_lc_rs",
] }
# ログ出力
tracing = "0.1"
# ログのフォーマットとサブスクライバ
tracing-subscriber = "0.3"

# Brotli 圧縮 (オプション)
brotli = { version = "8.0", optional = true }
# gzip / DEFLATE 圧縮 (オプション)
noflate = { version = "0.1", optional = true }
# Zstd 圧縮 (オプション)
zstd = { version = "0.13", optional = true }

[features]
# デフォルトで全圧縮形式を有効化
default = ["br", "gzip", "zstd"]
# Brotli 圧縮を有効化
br = ["dep:brotli"]
# gzip 圧縮を有効化
gzip = ["dep:noflate"]
# Zstd 圧縮を有効化
zstd = ["dep:zstd"]

[dev-dependencies]
# 自己署名証明書を実行時生成 (fixture cert の期限切れを回避)
rcgen = { version = "0.13", default-features = false, features = [
  # 暗号バックエンド (CLAUDE.md ルール)
  "aws_lc_rs",
  # PEM シリアライズ
  "pem",
] }
# テスト用の一時ディレクトリ (証明書ファイルの置き場)
tempfile = "3.13"
# 子プロセスの非同期管理 + stdout 行読み (tests でのみ追加 feature が必要)
tokio = { version = "1.52", features = [
  # 子プロセスの非同期管理
  "process",
  # AsyncBufReadExt::lines() を使う
  "io-util",
  # tokio::test マクロ
  "macros",
  # current-thread ランタイム
  "rt",
  # タイムアウト
  "time",
] }
