[package]
name = "http11_server_io_uring"
version = "0.0.0"
edition = "2024"
publish = false

[features]
default = ["gzip", "br", "zstd"]
gzip = ["dep:noflate"]
br = ["dep:brotli"]
zstd = ["dep:zstd"]

[dependencies]
shiguredo_http11 = { path = "../.." }
# io-uring 0.7.5+ for setsockopt support
io-uring = "0.7"
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
    "aws-lc-rs",
] }
# ktls 6.0.2+ for CryptoInfo::from_rustls() and as_ptr()
ktls = "6"
noargs = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
slab = "0.4"

# 圧縮 (オプション)
noflate = { version = "0.1", optional = true }
brotli = { version = "8", optional = true }
zstd = { version = "0.13", optional = true }
